--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsonql-js",
   "version": "1.0.0",
   "description": "A JS implementation of JSONQL",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
